# PipeModulePython

./: .gitignore  CMakeLists.txt
Config/: BuildCopy.py  TestText.txt
Dependencies/linux/x86_64-linux-gnu/python3.11/: pyconfig.h
MiddleManTerminal/: CMakeLists.txt
MiddleManTerminal/Headers/: GeneralPipe.h  GeneralProcess.h  MiddleManTerminal.h
MiddleManTerminal/Source/: GeneralPipe.cpp  GeneralProcess.cpp  MiddleManTerminal.cpp  MiddleManTerminalMain.cpp  MiddleManTerminalPython.cpp
PipeModulePython/: CMakeLists.txt
PipeModulePython/Headers/: PipeModulePython.h  PseudoTerminalSession.h
PipeModulePython/Source/: PipeModulePython.cpp  PseudoTerminalSession.cpp
TestProgram/: CMakeLists.txt
TestProgram/Headers/: TestHeader.h
TestProgram/Source/: Main.cpp
